--- a/recipes/alfredo_bake.html
+++ b/recipes/alfredo_bake.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Alfredo Bake</title>
+    <link rel="stylesheet" href="recipe_style.css">
 </head>
 <body>
     <nav>
@@ -12,32 +13,49 @@
             <li><a href="../index.html">home</a></li>
         </ul>
     </nav>
-    <h1>Chicken Alfredo Bake</h1>
-    <figure>
-        <img src="../images/chicken-alfredo-bake.jpeg" width="250" alt="Chicken Alfredo Bake">
-        <figcaption>Recipe source: <a href="https://www.allrecipes.com/recipe/273664/chicken-alfredo-bake/">thedailygourmet</a></figcaption>
-    </figure>
-    <h2>Description</h2>
-    <p>This creamy dish is made with penne pasta topped with rotisserie chicken and cheese and baked in an oven. Goes well with salad or garlic bread on the side.</p>
-    <h2>Required ingredients</h2>
-    <ul>
-        <li>2 cups penne pasta</li>
-        <li>1 tablespoon butter</li>
-        <li>1 clove garlic, minced</li>
-        <li>1 ½ tablespoons all-purpose flour
-        <li>½ cup 1% milk</li>
-        <li>½ cup heavy cream</li>
-        <li>1 cup freshly grated Parmigiano-Reggiano cheese</li>
-        <li>1 pinch ground nutmeg</li>
-        <li>1 cup cubed rotisserie chicken</li>
-    </ul>
-    <h2>Instructions</h2>
-    <ol>
-        <li>Bring a large pot of lightly salted water to a boil. Add penne and cook, stirring occasionally, until tender yet firm to the bite, about 11 minutes.</li>
-        <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
-        <li>melt butter in a saucepan over medium heat and cook garlic for 1 minute. Whisk in flour until a paste forms. Pour in milk and cream, whisking continuously until smooth. Stir in 3/4 of the Parmigiano-Reggiano cheese and nutmeg. Add drained penne pasta and cooked chicken; stir to combine. Pour mixture into a casserole dish. Sprinkle with remaining cheese.</li>
-        <li>Bake in the preheated oven until cheese is melted, 10 to 12 minutes.</li>
-        <li>Enjoy the meal!</li>
-    </ol>
+    <div class="container">
+        <div class="main flex-child">
+            <h1>Chicken Alfredo Bake</h1>
+            <figure>
+                <img src="../images/chicken-alfredo-bake.jpeg" width="250" alt="Chicken Alfredo Bake">
+                <figcaption>Recipe source: <a
+                        href="https://www.allrecipes.com/recipe/273664/chicken-alfredo-bake/">thedailygourmet</a></figcaption>
+            </figure>
+        </div>
+        <div class="description flex-child">
+            <h2>Description</h2>
+            <p>This creamy dish is made with penne pasta topped with rotisserie chicken and cheese and baked in an oven. Goes well
+                with salad or garlic bread on the side.</p>
+        </div>
+        <div class="ingredients flex-child">
+            <h2>Required ingredients</h2>
+            <ul>
+                <li>2 cups penne pasta</li>
+                <li>1 tablespoon butter</li>
+                <li>1 clove garlic, minced</li>
+                <li>1 ½ tablespoons all-purpose flour
+                <li>½ cup 1% milk</li>
+                <li>½ cup heavy cream</li>
+                <li>1 cup freshly grated Parmigiano-Reggiano cheese</li>
+                <li>1 pinch ground nutmeg</li>
+                <li>1 cup cubed rotisserie chicken</li>
+            </ul>
+        </div>
+        <div class="instructions flex-child">
+            <h2>Instructions</h2>
+            <ol>
+                <li>Bring a large pot of lightly salted water to a boil. Add penne and cook, stirring occasionally, until tender
+                    yet
+                    firm to the bite, about 11 minutes.</li>
+                <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
+                <li>Melt butter in a saucepan over medium heat and cook garlic for 1 minute. Whisk in flour until a paste forms.</li>
+                <li>Pour in milk and cream, whisking continuously until smooth.</li>
+                <li>Stir in 3/4 of the Parmigiano-Reggiano cheese and nutmeg. Add drained penne pasta and cooked chicken; stir to combine. Pour mixture into a casserole dish.
+                    Sprinkle with remaining cheese.</li>
+                <li>Bake in the preheated oven until cheese is melted, 10 to 12 minutes.</li>
+                <li>Enjoy the meal!</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
