--- a/recipes/vegetarian_chili.html
+++ b/recipes/vegetarian_chili.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Best Vegetarian Chili</title>
+    <link rel="stylesheet" href="recipe_style.css">
 </head>
 <body>
     <nav>
@@ -12,44 +13,54 @@
             <li><a href="../index.html">home</a></li>
         </ul>
     </nav>
-    <h1>The Best Vegetarian Chili</h1>
-    <figure>
-        <img src="../images/vegetarian-chili.jpeg" width="250" alt="Vegetarian Chili">
-        <figcaption>Recipe source: <a href="https://www.allrecipes.com/recipe/72508/the-best-vegetarian-chili-in-the-world/"">calead910</a></figcaption>
-    </figure>
-    <h2>Description</h2>
-    <p>Make a batch of this wonderful, spicy vegetarian chili now in your soup pot! It's quick to prepare and full of vegetables, beans, and taste!</p>
-    <h2>Required ingredients</h2>
-    <ul>
-        <li>1 tablespoon olive oil</li>
-        <li>½ medium onion, chopped</li>
-        <li>2 bay leaves</li>
-        <li>1 teaspoon ground cumin</li>
-        <li>2 tablespoons dried oregano</li>
-        <li>1 tablespoon salt</li>
-        <li>2 stalks celery, chopped</li>
-        <li>2 green bell peppers, chopped</li>
-        <li>2 jalapeno peppers, chopped</li>
-        <li>3 cloves garlic, chopped</li>
-        <li>2 (4 ounce) cans chopped green chile peppers, drained</li>
-        <li>2 (12 ounce) packages vegetarian burger crumbles</li>
-        <li>3 (28 ounce) cans whole peeled tomatoes, crushed</li>
-        <li>¼ cup chili powder</li>
-        <li>1 tablespoon ground black pepper</li>
-        <li>1 (15 ounce) can kidney beans, drained</li>
-        <li>1 (15 ounce) can garbanzo beans, drained</li>
-        <li>1 (15 ounce) can black beans</li>
-        <li>1 (15 ounce) can whole kernel corn</li>
-    </ul>
-    <h2>Instructions</h2>
-    <ol>
-        <li>Heat the olive oil in a large pot over medium heat.</li>
-        <li>Stir in the onion, and season with bay leaves, cumin, oregano, and salt.</li>
-        <li>Cook and stir until onion is tender, then mix in the celery, green bell peppers, jalapeno peppers, garlic, and green chile peppers</li>
-        <li>When vegetables are heated through, mix in the vegetarian burger crumbles.</li>
-        <li>Reduce heat to low, cover pot, and simmer 5 minutes.</li>
-        <li>Mix the tomatoes into the pot. Season chili with chili powder and pepper. Stir in the kidney beans, garbanzo beans, and black beans.</li>
-        <li>Bring to a boil, reduce heat to low, and simmer 45 minutes. Stir in the corn, and continue cooking 5 minutes before serving.</li>
-    </ol>
+    <div class="container">
+        <div class="main flex-child">
+            <h1>The Best Vegetarian Chili</h1>
+            <figure>
+                <img src="../images/vegetarian-chili.jpeg" width="250" alt="Vegetarian Chili">
+                <figcaption>Recipe source: <a href="https://www.allrecipes.com/recipe/72508/the-best-vegetarian-chili-in-the-world/"">calead910</a></figcaption>
+            </figure>
+        </div>
+        <div class="description flex-child">
+            <h2>Description</h2>
+            <p>Make a batch of this wonderful, spicy vegetarian chili now in your soup pot! It's quick to prepare and full of vegetables, beans, and taste!</p>
+        </div>
+        <div class="ingredients flex-child">
+            <h2>Required ingredients</h2>
+            <ul>
+                <li>1 tablespoon olive oil</li>
+                <li>½ medium onion, chopped</li>
+                <li>2 bay leaves</li>
+                <li>1 teaspoon ground cumin</li>
+                <li>2 tablespoons dried oregano</li>
+                <li>1 tablespoon salt</li>
+                <li>2 stalks celery, chopped</li>
+                <li>2 green bell peppers, chopped</li>
+                <li>2 jalapeno peppers, chopped</li>
+                <li>3 cloves garlic, chopped</li>
+                <li>2 (4 ounce) cans chopped green chile peppers, drained</li>
+                <li>2 (12 ounce) packages vegetarian burger crumbles</li>
+                <li>3 (28 ounce) cans whole peeled tomatoes, crushed</li>
+                <li>¼ cup chili powder</li>
+                <li>1 tablespoon ground black pepper</li>
+                <li>1 (15 ounce) can kidney beans, drained</li>
+                <li>1 (15 ounce) can garbanzo beans, drained</li>
+                <li>1 (15 ounce) can black beans</li>
+                <li>1 (15 ounce) can whole kernel corn</li>
+            </ul>
+        </div>
+        <div class="instructions flex-child">
+            <h2>Instructions</h2>
+            <ol>
+                <li>Heat the olive oil in a large pot over medium heat.</li>
+                <li>Stir in the onion, and season with bay leaves, cumin, oregano, and salt.</li>
+                <li>Cook and stir until onion is tender, then mix in the celery, green bell peppers, jalapeno peppers, garlic, and green chile peppers</li>
+                <li>When vegetables are heated through, mix in the vegetarian burger crumbles.</li>
+                <li>Reduce heat to low, cover pot, and simmer 5 minutes.</li>
+                <li>Mix the tomatoes into the pot. Season chili with chili powder and pepper. Stir in the kidney beans, garbanzo beans, and black beans.</li>
+                <li>Bring to a boil, reduce heat to low, and simmer 45 minutes. Stir in the corn, and continue cooking 5 minutes before serving.</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
