--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="http://fonts.cdnfonts.com/css/villa" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <figure>
-        <img src="images/main.gif" alt="pixel art gif of cooking" width="400" style="display:block; margin-bottom: 10px">
-        <figcaption>GIF source: <a href="https://akrokus.tumblr.com/post/167635852918/pixel-practice">Alex Krokus</a></figcaption>
-    </figure>
-    <h2>Recipes</h2>
-    <ul>
-        <li><a href="recipes/alfredo_bake.html">Chicken Alfredo Bake</a></li>
-        <li><a href="recipes/apple_pie.html">Apple Pie by Grandma Ople</a></li>
-        <li><a href="recipes/vegetarian_chili.html">The Best Vegetarian Chili</a></li>
-    </ul>
+    <div class="container">
+        <div class="header flex-child">
+            <h1>Odin Recipes</h1>
+            <img src="images/front.jpg" alt="image of cooking" width="400" style="display:block; margin-bottom: 10px">
+        </div>
+        <div class="recipes flex-child">
+            <h2 class="subheader">Recipes</h2>
+            <ul>
+                <li><a href="recipes/alfredo_bake.html">Chicken Alfredo Bake</a></li>
+                <li><a href="recipes/apple_pie.html">Apple Pie by Grandma Ople</a></li>
+                <li><a href="recipes/vegetarian_chili.html">The Best Vegetarian Chili</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
