added nav bar  to home page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Odin Recipes</title>
 </head>
 <body>
+    <nav class="navigation">
+        <ul>
+            <li><a href="../index.html">home</a></li>
+        </ul>
+    </nav>
     <div class="container">
         <div class="header flex-child">
             <h1>Odin Recipes</h1>
